# Universal-AI-Governor

./: .gitignore  AUTOMATION.md  AUTOMATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNOR_MODULE_IMPLEMENTATION.md  Makefile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SECURITY_STATUS.md  SECURITY_SUMMARY.md  SECURITY_UPDATES.md  docker-compose.yml  go.mod  go.sum  main.go  main_test.go
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: adversarial-testing-ci.yml  automated-security.yml  build-and-test.yml  ci.yml  codeql-advanced.yml  comprehensive-testing.yml  hardware-integration-ci.yml  multimedia-regulatory-ci.yml  release-automation.yml
benches/: performance.rs
cmd/: main.go
config/: default.toml  development.toml  docker.toml  production.toml  production.toml.example
configs/: config.yaml
deployment/helm/: Chart.yaml  values.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml
docs/: DEPLOYMENT_GUIDE.md  SECURITY_GUIDE.md  architecture.md  quickstart.md
docs/architecture/: hardware_architecture.md  sequence_diagrams.md
examples/javascript/: basic-usage.js
examples/python/: basic_usage.py
internal/api/: handlers.go  routes.go
internal/config/: config.go
internal/governance/: engine.go  metrics.go
internal/governance/adapters/: llm_factory.go  missing_adapters.go  ollama_adapter.go  openai_adapter.go
internal/governance/audit/: audit.go  service.go
internal/governance/guardrails/: guardrails.go  service.go
internal/governance/moderation/: service.go
internal/governance/policy/: opa.go
internal/logging/: logger.go
internal/middleware/: middleware.go
internal/security/: advanced_auth.go  behavioral_analysis.go  crypto_utils.go  enclave_protection.go  integration.go  rbac_system.go  sandbox_protection.go  sandbox_protection_darwin.go  sandbox_protection_linux.go  security.go  signature_db.go  threat_detection.go
internal/types/: types.go
policies/: base.rego
scripts/: analyze_performance.py  automation.sh  build.sh  deploy.sh  generate_adversarial_report.py  generate_test_report.py  install-ai-governor.sh  install.sh  security-scan.sh  security_assessment.py  setup.sh  test.sh
sdks/javascript/: package-lock.json  package.json
sdks/javascript/src/: client.test.ts  client.ts  index.ts  models.ts  types.ts
sdks/python/: README.md  requirements.txt  setup.py  simple_test.py
sdks/python/ai_governor/: __init__.py  cli.py  client.py  models.py
sdks/python/tests/: test_client.py  test_models.py
sdks/python/universal_ai_governor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: audit.rs  config.rs  hardware.rs  lib.rs  main.rs  policy.rs  security.rs
src/core/: mod.rs
src/governor_core/: attestation_endpoint.rs  crypto.rs  enhanced_audit.rs  hardware.rs  incident_analyzer.rs  master_key_service.rs  mod.rs  offline_llm_engine.rs  policy_synthesizer.rs  secure_enclave.rs
tests/: integration_tests.rs
tests/adversarial/: prompt_injection_tests.rs
tests/chaos/: fault_injection_tests.rs
tests/e2e/: mod.rs
tests/integration/: hardware_integration_tests.rs  mod.rs
tests/multimedia/: audio_attack_tests.rs  vision_attack_tests.rs
tests/policy_synthesizer/: ai_policy_generation_tests.rs
tests/rbac/: permission_matrix_tests.rs
tests/regulatory/: gdpr_compliance_tests.rs
