[package]
name = "universal-ai-governor"
version = "1.0.0"
edition = "2021"
authors = ["Sourav Rajak <morningstar.xcd@gmail.com>"]
description = "Hardware-backed AI governance platform for enterprise deployments"
license = "MIT"
repository = "https://github.com/MStarRobotics/Universal-AI-Governor"
homepage = "https://github.com/MStarRobotics/Universal-AI-Governor"
documentation = "https://docs.rs/universal-ai-governor"
readme = "README.md"
keywords = ["ai", "security", "governance", "tpm", "enterprise"]
categories = ["security", "web-programming", "api-bindings"]
rust-version = "1.70"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration management
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
ring = "0.17"
zeroize = { version = "1.7", features = ["derive"] }

# Database support
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async utilities
futures = "0.3"

# JSON Web Tokens
jsonwebtoken = "9.0"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Hardware integration (optional)


[features]
default = []
secure-enclave = []
adversarial-testing = []
fuzzing-support = []
fault-injection = []
chaos-testing = []
rbac-testing = []
permission-matrix = []
stability-testing = []
memory-profiling = []
load-testing = []
metrics = []
fips-compliance = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.5"
proptest = "1.0"
futures-util = "0.3"

[[bin]]
name = "universal-ai-governor"
path = "src/main.rs"

[[bench]]
name = "performance"
harness = false

[lib]
name = "universal_ai_governor"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
